checkpoint(worklog): T-02-01 Day 6 complete

--- a/.artifacts/spec-tasks-T-02-01-graph-builder/worklogs/2025-10-30-notes.md
+++ b/.artifacts/spec-tasks-T-02-01-graph-builder/worklogs/2025-10-30-notes.md
@@ -1,388 +1,77 @@
-# Development Notes - 2025-10-30
+# Development Notes – 2025-10-30
 
-**Task**: T-02-01-graph-builder - Graph Builder - AST Parsing & Construction
-**Date**: 2025-10-30 (Day 6 - Final Completion Day)
-**Author**: Rust Dev 1 + Claude Code Agent
-
----
-
-## Technical Notes
-
-### Architecture Overview (Current State)
-
-**Module Structure** (14 modules, 5,214 lines):
-```
-crates/cds-index/src/graph/
-├── mod.rs (17 public functions, API surface)
-├── parser.rs (426 lines - tree-sitter integration)
-├── traversal.rs (64 lines - graph traversal helpers)
-└── builder/
-    ├── mod.rs (main orchestration)
-    ├── state.rs (458 lines - BuilderState)
-    ├── imports.rs (674 lines - 21 functions, import resolution)
-    ├── behaviors.rs (195 lines - invoke/inherit edges)
-    ├── aliases.rs (alias map helpers)
-    ├── language.rs (language detection)
-    └── python/
-        ├── mod.rs (AST walker)
-        ├── ast_utils.rs (645 lines - AST queries, TYPE_CHECKING)
-        ├── import_resolver.rs (import directive parsing)
-        └── call_extractor.rs (invoke edge extraction)
-```
-
-### Implementation Status
-
-#### ✅ Complete Components
-1. **AST Parser** (`parser.rs`)
-   - Tree-sitter Python grammar integration
-   - Query pattern loading from LocAgent `.scm` files
-   - Handles all Python syntax elements
-
-2. **Graph Data Model** (`mod.rs`)
-   ```rust
-   pub enum NodeKind {
-       Directory, File, Class, Function  // All 4 ✅
-   }
-
-   pub enum EdgeKind {
-       Contain, Import, Invoke, Inherit  // All 4 ✅
-   }
-   ```
-
-3. **Import Resolution** (`imports.rs`)
-   - 21 functions handling all import patterns
-   - `ModuleExports` tracking system
-   - Wildcard import expansion
-   - Re-export chain resolution
-   - TYPE_CHECKING block support (Day 5)
-
-4. **Invoke/Inherit Edges** (`behaviors.rs`)
-   - AST-based call expression extraction
-   - Decorator analysis
-   - Class inheritance detection
-   - Multi-target alias resolution (Day 4)
-
-5. **Parity Validation** - 🟢 EXCELLENT
-   - 6/6 fixtures within ≤2% tolerance
-   - 0% variance on nodes/contains/inherits/imports for best fixtures
-   - Invokes within +0.09% to +1.29% range
-
-#### ⚠️ Incomplete Components
-1. **Test Coverage** (~30%, need >80%)
-   - 8 unit tests (7 pass, 1 fail)
-   - Missing: nested classes, async, error handling, etc.
-
-2. **API Documentation**
-   - Public functions lack doc comments
-   - No usage examples in docs
+**Task**: T-02-01-graph-builder (Graph Builder – AST Parsing & Construction)  
+**Session Range**: 4-01 → 4-03 (05:30–09:30 UTC)
 
 ---
 
-## Research & Learning
+## 1. Regression Analysis – `import_edges_follow_package_reexports`
 
-### Findings from Day 1-5 Implementation
+- **Symptom**: Re-export scenario (`pkg/__init__.py` forwarding `Service` from `pkg/core.py`) lost its import edge after TYPE_CHECKING refactor.
+- **Root Cause**: Fallback branch in `process_from_import` emitted only a single file edge without alias context when symbol lookup deferred. Alias map never received the symbol, so verification failed.
+- **Fix**:
 
-#### Key Insight 1: LocAgent's Export Tracking is Critical
-**Question**: Why were import edges initially +23.85% off parity?
+  ```rust
+  // crates/cds-index/src/graph/builder/imports.rs
+  for alias in &item.aliases {
+      let label = alias.alias.as_ref().unwrap_or(&alias.name);
+      state.emit_import_edge(current_idx, file_idx, Some(label.clone()));
+      state.module_exports.insert_symbol(label, ExportTarget::File(file_idx));
+  }
+  ```
 
-**Answer**: LocAgent uses comprehensive `ModuleExports` tracking to resolve `from pkg import Symbol` across re-export chains. Without mirroring this system, we missed edges.
-
-**Solution**: Implemented complete `ModuleExports` model in Day 3:
-- Parse `__all__` declarations
-- Track re-exports in `__init__.py`
-- Defer attribute resolution until after directory pass
-- Result: Import parity RESOLVED (0% variance)
-
-**References**:
-- `tmp/LocAgent/dependency_graph/build_graph.py` lines 1420-1580
-- `crates/cds-index/src/graph/builder/imports.rs` lines 200-350
-
-#### Key Insight 2: TYPE_CHECKING Blocks Require Special Handling
-**Question**: Why did pytest fixture have missing `inherits` edges?
-
-**Answer**: LocAgent's `find_in_block()` descends into `if TYPE_CHECKING:` blocks to discover decorator base classes. Our initial implementation skipped these blocks.
-
-**Solution** (Day 5):
-- Extended `find_in_block()` to recursively check if-statement bodies
-- Specifically target `if TYPE_CHECKING:` patterns
-- Result: pytest inherits restored to 0% variance
-
-**Code Change**:
-```rust
-// crates/cds-index/src/graph/builder/python/ast_utils.rs
-pub fn find_in_block(node: Node, target: &str) -> bool {
-    // ... existing logic ...
-    if node.kind() == "if_statement" {
-        for child in node.children(&mut node.walk()) {
-            if child.kind() == "block" && find_in_block(child, target) {
-                return true;  // Descend into TYPE_CHECKING blocks
-            }
-        }
-    }
-    // ...
-}
-```
-
-**Impact**: Restored 13 inherits edges in pytest (mark decorators using pytest.Mark base class)
-
-#### Key Insight 3: Grouped Imports Need Alias-Labeled Edges
-**Question**: Why did Django fixture have import variance after parity was initially resolved?
-
-**Answer**: LocAgent emits file-level edges with alias labels for grouped imports like `from foo import a, b, c`. Our fallback logic only emitted plain file edges.
-
-**Solution** (Day 5):
-```rust
-// When we can't resolve individual symbols in grouped import
-for alias_name in ["a", "b", "c"] {
-    emit_edge(Edge {
-        kind: Import,
-        source: current_file,
-        target: imported_file,
-        label: Some(alias_name),  // Key: preserve alias
-    });
-}
-```
-
-**Result**: Django imports restored to 0% variance (463/463 edges)
+  - Ensures every alias name is re-registered with `ModuleExports`.
+  - Mirrors LocAgent’s `record_file_export` semantics (see `build_graph.py` L1438–L1474).
+- **Validation**: Targeted unit test now passes; parity fixtures unaffected.
 
 ---
 
-## Testing Strategy
+## 2. Coverage Expansion
 
-### Current Test Suite
-
-#### Unit Tests (8 tests)
-1. ✅ `import_edges_capture_aliases` - Basic import with alias
-2. ❌ `import_edges_follow_package_reexports` - **FAILING** (re-export chain)
-3. ✅ `wildcard_imports_expand_all_exports` - `from foo import *`
-4. ✅ `exports_follow_module_all_aliases` - `__all__` tracking
-5. ✅ `behavior_edges_detect_invokes_and_inherits` - Calls + inheritance
-6. ✅ `invoke_edges_follow_import_aliases` - Alias resolution
-7. ✅ `decorator_aliases_emit_invoke_edges` - Decorator edges
-8. ✅ `invoke_edges_include_all_alias_candidates` - Multi-target (Day 4)
-
-#### Integration Tests (1 test)
-- ✅ `graph_parity_baselines` - Validates all 6 fixtures against golden outputs
-
-### Planned Test Expansion (Session 1-2)
-
-**Priority 1 - Core Language Features** (Must Add):
-```rust
-#[test]
-fn nested_classes_detected() {
-    // Outer::Inner::Deep structure
-}
-
-#[test]
-fn nested_functions_detected() {
-    // closure scenarios
-}
-
-#[test]
-fn async_functions_parsed() {
-    // async def + await
-}
-
-#[test]
-fn lambdas_create_function_nodes() {
-    // lambda x: x + 1
-}
-```
-
-**Priority 2 - Import Edge Cases**:
-```rust
-#[test]
-fn relative_imports_resolve() {
-    // from . import foo
-    // from .. import bar
-}
-
-#[test]
-fn circular_imports_handled() {
-    // a.py imports b.py, b.py imports a.py
-}
-```
-
-**Priority 3 - Error Handling**:
-```rust
-#[test]
-fn invalid_syntax_returns_error() {
-    // Malformed Python should error gracefully
-}
-
-#[test]
-fn empty_files_produce_file_node_only() {
-    // Empty .py file → 1 file node, no classes/functions
-}
-```
-
-**Priority 4 - Inheritance**:
-```rust
-#[test]
-fn single_inheritance_creates_inherit_edge() {
-    // class Child(Parent)
-}
-
-#[test]
-fn multiple_inheritance_creates_multiple_edges() {
-    // class Child(A, B, C)
-}
-```
-
-### Test Coverage Goal
-- **Current**: 8 tests ≈ 30% coverage
-- **Target**: 23-28 tests ≈ 85% coverage
-- **Strategy**: Add 15-20 focused tests covering spec edge cases
+- Added **15 focused tests** in `graph_builder_tests.rs` covering:
+  - Nested containment (classes/functions two levels deep).
+  - Async call graph (`async def`, `await`).
+  - `if TYPE_CHECKING` imports and decorator inheritance.
+  - Relative (`from . import`, `from ..pkg import`) & circular imports (two-file mutual dependency).
+  - Decorators w/ arguments, class decorators, property helpers.
+  - Error-path resilience (invalid syntax surfaces ParseFailure edge case).
+  - Wildcard export permutations (`list`, `tuple`, `set`, `augassign` updates to `__all__`).
+- Pattern: mini inline repositories loaded via `build_graph_with_files`, assertions on node/edge counts + labels for alias correctness.
+- Coverage estimate (sampling via `cargo llvm-cov` locally) ≈ **82 %** lines in `graph::builder`.
 
 ---
 
-## Performance Observations
+## 3. API Documentation Enhancements
 
-### Parity Harness Timing (Latest Run)
-- **Total Time**: <60 seconds for 6 repos
-- **Largest Repo**: django (6,876 nodes, 10,002 edges)
-- **Fastest**: matplotlib (1,304 nodes, <5s)
-
-**Conclusion**: Performance well within acceptable range for MVP. No optimization needed.
-
-### Memory Usage
-- Not profiled yet (defer to performance benchmark task T-08-04)
-- Expectation: <500MB for LocAgent-sized repos (~150 files)
+- Documented `CodeGraph`, `GraphBuilder`, `NodeKind`, `EdgeKind`, and helper constructors in `graph/mod.rs`.
+- Added usage snippet illustrating `GraphBuilder::build_from_root(PathBuf)` returning `(CodeGraph, Diagnostics)`.
+- Doc comments highlight deterministic ordering guarantees (sorted directory traversal) and parity expectations (≤2 % variance vs. LocAgent).
+- Bench harness (`graph_bench.rs`, `search_bench.rs`) now uses `std::hint::black_box` to stabilize results; removed stale TODO about unstable compiler flags.
 
 ---
 
-## Code Quality Checklist
+## 4. Verification Snapshot
 
-### Pre-PR Checklist (To Complete Today)
-- [ ] All tests pass (23+ tests, 100% pass rate)
-- [ ] Clippy clean (0 warnings)
-- [ ] Compilation clean (0 errors)
-- [ ] Test coverage >80%
-- [ ] Doc comments on public API
-- [ ] No debug prints or commented code
-- [ ] Git history clean (meaningful commits)
-
-### Self-Review Notes
-- ✅ Code follows Rust idioms
-- ✅ Error handling comprehensive
-- ✅ Modular architecture (14 well-separated modules)
-- ⚠️ Missing doc comments (to add in Session 2)
-- ⚠️ Test coverage gap (to fill in Session 1-2)
+- `cargo test -p cds-index` → PASS (23 unit tests, 1 integration, 30 service contract tests).
+- `cargo test -p cds-index --test graph_parity_tests -- --nocapture` → PASS in 34 s, parity table captured in summary.
+- `cargo clippy --all-targets --all-features -p cds-index` → PASS (0 warnings).
+- Bench targets compile post `black_box` swap.
 
 ---
 
-## Integration Notes
+## 5. Metrics Recorded
 
-### Downstream Dependencies (Blocked on T-02-01)
-
-Once T-02-01 merges:
-1. **T-02-02-sparse-index** (Rust Dev 2) ✅ Can start immediately
-   - Will consume `CodeGraph` output
-   - Build BM25 + name index on top
-
-2. **T-02-03-service-layer** (Rust Dev 1)
-   - Requires both T-02-01 + T-02-02
-   - JSON-RPC server exposing graph + search
-
-3. **T-03-01-cli-commands** (Rust Dev 2)
-   - CLI tools wrapping service endpoints
-
-### API Surface for Index Builder
-
-`CodeGraph` provides:
-```rust
-pub struct CodeGraph {
-    nodes: HashMap<GraphNodeIndex, Node>,
-    edges: Vec<Edge>,
-}
-
-impl CodeGraph {
-    pub fn nodes(&self) -> impl Iterator<Item = &Node>;
-    pub fn edges(&self) -> impl Iterator<Item = &Edge>;
-    pub fn find_node_by_fqn(&self, fqn: &str) -> Option<&Node>;
-}
-```
-
-**Usage in T-02-02**:
-```rust
-let graph = build_repo_graph(repo_path)?;
-for node in graph.nodes() {
-    if node.kind == NodeKind::Function {
-        // Index function name + docstring for BM25
-        index.add_document(node.id, node.name, node.docstring);
-    }
-}
-```
+- Total unit tests: **23** (↑ from 8).
+- Branch diff vs `main`: +619/−58 lines today (tests, docs, benches, minor fixes).
+- Estimated effort today: **~4 h** (analysis + implementation + verification).
+- Task readiness: ✅ Completed — all acceptance criteria & parity targets satisfied.
 
 ---
 
-## Risks & Mitigation
+## 6. Follow-up Checklist
 
-### Risk 1: Test Coverage Takes Too Long
-**Probability**: Medium
-**Impact**: High (blocks PR merge)
-**Mitigation**:
-- Prioritize highest-value tests first
-- Accept 75% coverage if time constrained (document remaining in TODO)
-- Can add more tests in follow-up PR
-
-### Risk 2: Failing Test Reveals Systemic Bug
-**Probability**: Low
-**Impact**: High
-**Mitigation**:
-- We've already fixed similar issues in Day 3-5
-- Worst case: Rollback Day 5 changes to `process_from_import()`
-- Or: Skip test with `#[ignore]` and file follow-up issue
-
-### Risk 3: Clippy Finds Breaking Issues
-**Probability**: Low
-**Impact**: Medium
-**Mitigation**:
-- Code already compiles cleanly
-- Can use `#[allow(...)]` for non-critical lints
-- Most issues likely cosmetic (e.g., `clippy::too_many_arguments`)
-
----
-
-## TODO / Follow-up
-
-### Today's Session Tasks
-- [ ] Fix `import_edges_follow_package_reexports` (Session 1)
-- [ ] Add 15-20 unit tests (Session 1-2)
-- [ ] Run clippy (Session 2)
-- [ ] Add doc comments (Session 2)
-- [ ] Update metadata.yaml (Session 3)
-- [ ] Create PR (Session 4)
-
-### Future Improvements (Post-0.1.0)
-- [ ] Add TypeScript/JavaScript support (v0.2.0 - Issue 10.03)
-- [ ] Add Go support (v0.3.0 - Issue 10.05)
-- [ ] Optimize graph construction for large repos (v0.4.0)
-- [ ] Add incremental update support (v0.5.0)
-
----
-
-## References
-
-### Specifications
-- **PRD**: `spacs/prd/0.1.0-MVP-PRDs-v0/02-cds-index-service.md` §2.1 (Graph Builder)
-- **PRD**: `spacs/prd/0.1.0-MVP-PRDs-v0/06-rust-refactoring-plan.md` §4.2 (Parity)
-- **Issue**: `spacs/issues/04-0.1.0-mvp/02-index-core/01-graph-build.md`
-- **Task**: `spacs/tasks/0.1.0-mvp/02-index-core/T-02-01-graph-builder.md`
-
-### Reference Implementation
-- **LocAgent**: `tmp/LocAgent/dependency_graph/build_graph.py`
-- **Query Patterns**: `tmp/LocAgent/dependency_graph/queries/`
-- **Parity Methodology**: `docs/parity-validation-methodology.md`
-
-### Related Tasks
-- **T-06-01**: LocAgent Parity Methodology (✅ Complete, provides baselines)
-- **T-02-02**: Sparse Index (⏸ Blocked, waiting for T-02-01)
-- **T-02-03**: Service Layer (⏸ Blocked, waiting for T-02-01 + T-02-02)
-
----
-
-**Session Duration**: (To be updated)
-**Productivity**: (To be assessed at EOD)
-**Blockers**: None (all dependencies met)
-**Overall Status**: 95% complete, final push underway
+1. Stage & commit code + artifacts; attach git note referencing parity/test results.
+2. Push branch and commit notes.
+3. Draft PR (include parity table, coverage summary, doc comment screenshots).
+4. Update `spacs/tasks/0.1.0-mvp/TODO.yaml` after PR opened to mark T-02-01 complete / unblock T-02-02.
+5. Notify sparse-index owner that T-02-01 dependency is cleared.
